-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.2.2
-
None
-
Windows 7
-
28907f76e40998ed7f40e5d14c8684c033d124e8
[Windows] Attach to unstarted application does not work. I did the following steps:
- Start Qt Creator
- Go to Debug | Start Debugging | Attach to unstarted application
- Selected the relevant kit
- Specified the executable
- Clicked on Start Watching
- Started the application externally and the app starts but is not attached to
For Gerrit Dashboard: QTCREATORBUG-13517 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
100736,7 | Debugger: Fix Attach to Unstarted Application. | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |