Debugger: Fix Attach to Unstarted Application.

Use paths with native directory separator when comparing
application names. Also disable the "Continue on Attach"
combo box when a kit with a cdb is selected. The cdbengine
always continues after an attach.

Task-number: QTCREATORBUG-13517
Change-Id: I3dd9cca98f9b4255cafc318836377d802413eace
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>